Update version to 2.0.0.0. Ported to .NET 5.
Ported to .NET 5.

The projects no longer rely on DLLs placed in the SharedLibraries folder and has now been updated to use NuGet packages for all external dependencies.

Modified FileSystem to include Windows specific functionality in their own classes, which are limited to being called only if run on the Windows platform. If called from other platforms they will return empty or null values.

Modified ActiveDirectory to limit access to certain methods that rely on Windows-specific functionality to being called only if run on the Windows platform. If called from other platforms they will return empty or null values.

Added property level access to FileStream. Resolves #10

Removed NoSql projects that weren't in wide use.
- Galactic.NoSql.Couchbase
- Galactic.NoSql.MongoDB

Removed SharePoint project, in prep for transition to Microsoft Graph. (It will likely be added back in a future release.)

Remove Galactic.Configuration project. This was developed prior to the broad availability to secret vaults that are commonly used today, and as such is being removed. All constructors that reference it in the codebase have likewise been removed.

Convenience methods in the Cryptography project that facilitated the creation and manipulation of consolidated strings for use primarily by the Configuration project have been removed.

Removed Galactic Calendar projects. These were not widely used.
- Galactic.Calendar
- Galactic.Calendar.iCalendar

Removed Galactic.Web.Security projects. These are not relevant to .NET 5 projects.
- Galactic.Web.Security.ActiveDirectory
- Galactic.Web.Security.SimpleActiveDirectory
- Galactic.Web.SimpleMapping

Removed DnDNS library dependency as it hasn't been ported to .NET 5. Replaced with DnsClient.NET.

Removed automatic assembly versioning logic as functionality this is now baked into .NET 5 solution files.

Updated LICENSE and README to reflect new development.

--- a/README
+++ b/README
@@ -1,20 +1,6 @@
-This is the main project for the Galactic API. It uses the SharedLibraries project as a central place to put built DLLs and access third-party libraries necessary for the project but not availble via NuGet.
-
-This repository should generally be placed at the same level in the directory structure as the SharedLibraries project.
-
-For example:
-
-If you place the SharedLibraries project in: C:\Users\Username\Documents\Visual Studio 2015\Projects\SharedLibraries
-then this project should be placed in: C:\Users\Username\Documents\Visual Studio 2015\Projects\Galactic
+This is the main project for the Galactic API.
 
 -------------------------------------------------------------------------------
 Build Requirements:
 
-To accomodate automatic assembly versioning, this solution requires that the following be installed:
-
-Microsoft Visual Studio Extensibility Tools (formerly the Visual Studio SDK in releases prior to 2015)
-
-Modeling SDK for Visual Studio 2015 - http://www.microsoft.com/en-us/download/details.aspx?id=48148
-
-If they are not installed, automatic assembly versioning will not work, but the solution should otherwise
-build normally.
+This solution targets .NET 5.0.
